// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should close ConfirmModal correctly 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={200}
  contentLabel="You want to remove this expense?"
  isOpen={false}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  role="dialog"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <FormattedMessage
    defaultMessage="You want to remove this expense?"
    id="exepense-remove.title"
    values={Object {}}
  />
  <FormattedMessage
    defaultMessage="Yes"
    id="modal.yes"
    values={Object {}}
  />
  <FormattedMessage
    defaultMessage="No"
    id="modal.no"
    values={Object {}}
  />
</Modal>
`;

exports[`should render ConfirmModal correctly 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={200}
  contentLabel="You want to remove this expense?"
  isOpen={true}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  role="dialog"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <FormattedMessage
    defaultMessage="You want to remove this expense?"
    id="exepense-remove.title"
    values={Object {}}
  />
  <p
    className="modal__body"
  />
  <FormattedMessage
    defaultMessage="Yes"
    id="modal.yes"
    values={Object {}}
  />
  <FormattedMessage
    defaultMessage="No"
    id="modal.no"
    values={Object {}}
  />
</Modal>
`;
